services/messaging/k8s/messaging-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: groupsapp-messaging
  labels:
    app: groupsapp-messaging
spec:
  selector:
    app: groupsapp-messaging
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: grpc
      port: 50051
      targetPort: 50051
  type: ClusterIP
